infrastructure/compliance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compliance-service-green-canary
  namespace: ordinox-ai
spec:
  ingressClassName: nginx
  rules:
    - host: ordinoxai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: compliance-service
                port:
                  number: 8000
    - host: dev.ordinoxai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: compliance-service
                port:
                  number: 8000
